--- a/templates/home.twig
+++ b/templates/home.twig
@@ -19,6 +19,18 @@
         <---->
     </head>
     <body>
+        <main class="container-fluid">
+            <div class ="row">
+                {% for product in products %}
+                <div class="col-md-3">
+                    <img class ="img-fluid" src="images/products/products/{{product.image}}">
+                    <h4 class ="product-name">{{product.name}}</h4>
+                    <h6 class ="product-price">{{product.price}}</h6>
+                    <p class ="product-description">{{product.description}}</p>
+                </div>
+                {% endfor %}
+            </div>
+        </main>
     <h1>Products</h1>
     </body>
 </html>
