--- a/templates/detail.twig
+++ b/templates/detail.twig
@@ -2,6 +2,7 @@
 <html lang="en">
     {% include 'partials/head.twig' %}
     <body>
+    {% include 'partials/navigation.twig' %}
         <main class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
