--- a/templates/home.twig
+++ b/templates/home.twig
@@ -4,16 +4,16 @@
     <body>
     {% include 'partials/navigation.twig' %}
         <main class="container-fluid">
-            <div class ="row">
-                {% for product in products %}
+            <div class="row">
+            {% for product in products %}
                 <div class="col-md-3">
-                    <img class ="img-fluid" src="images/products/products/{{product.image}}">
-                    <h4 class ="product-name">{{product.name}}</h4>
-                    <h6 class ="product-price">{{product.price}}</h6>
-                    <p class ="product-description">{{product.description | slice(0,100) ~ '...'}}</p>
+                    <img class="img-fluid" src="images/products/{{product.image}}">
+                    <h4 class="product-name">{{product.name}}</h4>
+                    <h6 class="product-price">{{product.price}}</h6>
+                    <p class="product-description">{{product.description | slice(0,100) ~ '...'}}</p>
                     <a href="detail.php?product_id={{product.product_id}}">Detail</a>
                 </div>
-                {% endfor %}
+            {% endfor %}
             </div>
         </main>
     </body>
