--- a/templates/partials/navigation.twig
+++ b/templates/partials/navigation.twig
@@ -3,11 +3,11 @@
     <button class="navbar-toggler" type="button" data-toggle="#main-nav">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar=collapse" id "main-nav">
+    <div class="collapse navbar-collapse" id="main-nav">
         <nav class="nav navbar-nav">
             {% for item in navigation.items %}
             {% set active = (navigation.active == item.url) ? 'active' : '' %}
-                <a href = "{{item.url}}" class="nav-link {{active}}">{{item.menu}}</a>
+                <a href="{{item.url}}" class="nav-link {{active}}">{{item.menu}}</a>
             {% endfor %}
         </nav>
     </div>
